--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-validator": "^6.9.1",
     "mongoose": "^5.11.0",
     "morgan": "^1.10.0"
   },
