--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "chalk": "^4.1.1",
     "config": "^3.3.6",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.4.1",
